# gristmill-rewrites

./: .gitignore  Cargo.toml  README.md
python/: Cargo.toml  README.md  pyproject.toml
python/gristmill_rewrites/: __init__.py  _core.pyi
python/src/: error.rs  lib.rs  repr.rs  space.rs  state.rs
python/tests/: test_bindings.py
src/: action.rs  biclique.rs  canon.rs  cost.rs  io.rs  lib.rs  parenthesize.rs  permutation.rs  repr.rs  state.rs  transition.rs  verify.rs
src/biclique/: graph.rs  mod.rs  normalize.rs  search.rs  tests.rs
src/canon/: tests.rs
src/state/: canonicalize.rs  intermediate.rs  mod.rs  tests.rs  validate.rs
tests/: biclique.rs  canon.rs  cost.rs  io.rs  parenthesize.rs  permutation.rs  state.rs  verify.rs
