[build-system]
requires = ["maturin>=1.9.4,<2"]
build-backend = "maturin"

[project]
name = "gristmill-rewrites"
version = "0.1.0"
requires-python = ">=3.11"
description = "Python bindings for the gristmill-rewrites symbolic rewrite kernel"
readme = "README.md"

[dependency-groups]
dev = [
    "maturin>=1.9.4,<2",
    "pytest>=8",
]

[tool.maturin]
bindings = "pyo3"
exclude = ["**/__pycache__/**", "**/*.py[cod]"]
python-source = "."
module-name = "gristmill_rewrites._core"
manifest-path = "Cargo.toml"
